# nsx-chatbot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements.txt
scripts/: push_custom_docker_image.sh  release_version.sh
src/: .env_sample  debug_chat.py  main.py  playground.py  settings.py  streamlit.py
src/app/faqs/: B3.json  FUNDEP_Cardiologia.json  FUNDEP_Ciencias.json  FUNDEP_Medicina.json  FUNDEP_Paraopeba.json  FUNDEP_Pneumologia.json  Manual_Operacoes_Rota2030.json  Myralis_DPrev.json  Myralis_Diost.json  Serasa.json
src/app/prompts/: answer_not_found.py  base_prompt.py  base_prompt_pt.json  chat_prompt.py  faq_prompt.py  forced_finish.py  new_summary_prompt.py  unanswerable_search.py
src/app/routers/: chatbot.py  webhook.py
src/app/schemas/: database_item.py  messages.py  search.py
src/app/services/: azure_table_storage.py  azure_vault.py  build_timed_logger.py  chat_handler.py  chat_handler_factory.py  chat_handler_function_call.py  crud_cosmos.py  database.py  dialog_360.py  faq_search.py  memory_handler.py  nsx_search.py  process_query.py  query.py
src/app/utils/: error_codes.py  exceptions.py  log_templates.py  model_utils.py  timeout_management.py
src/cronjobs/: search_data_cleaner.py
src/playground_prompts/: my_playground_example.py
src/validation/: eval_requirements.txt  gsheet_utils.py  log_to_table.py  pipeline.py  pipeline_settings.py
src/validation/config/: index.jsonl
