[tool.poetry]
name = "nsx-chatbot"
version = "1.0.1"
description = "This project uses LLM-based NeuralMind technologies (NSX, NSXSense and others) to implement an autonomous agent that answers user questions about a specific document base using a chat based approach."
authors = ["NeuralMind Team"]
readme = "README.md"
packages = [{include = "src/app"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-cosmos = "^4.4.0"
azure-identity = "^1.13.0"
azure-keyvault-secrets = "^4.7.0"
fastapi = {extras = ["all"], version = "^0.98.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
redis = "^4.6.0"
requests = "^2.31.0"
rich = "^13.4.2"
tiktoken = "^0.4.0"
uvicorn = "^0.22.0"
azure-data-tables = "^12.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
azure-storage-blob = "^12.16.0"
neval = {git = "ssh://git@bitbucket.org/neuralmindteam/neval.git", rev = "feature/neural-validator-library"}
google-api-python-client = "^2.93.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
